imported patch doc_test_commit.diff

--- a/doc/book/README
+++ b/doc/book/README
@@ -46,6 +46,20 @@ a [foot note]_
 .. [foot note] the foot note content
 
 
+Boxes
+=====
+
+- warning box: 
+    .. warning::
+
+       Warning content
+- note box:
+    .. note::
+
+       Note content
+
+
+
 Cross references
 ================
 
