--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.9.8-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 23 Sep 2010 18:45:23 +0200
+
 cubicweb (3.9.7-1) unstable; urgency=low
 
   * new upstream release
